--- a/index-vue.html
+++ b/index-vue.html
@@ -11,8 +11,15 @@
     <div id="root">
         <header>
             <div class="container_logo">
-                <img src="img/spotify-logo.png" alt="">
+                <img src="img/spotify-logo.png" alt="spotify-logo">
             </div>
+            <select name="genre" v-model="genreSelected" @change="genreChoice">
+                <option value="">All</option>
+                <option value="Rock">Rock</option>
+                <option value="Pop">Pop</option>
+                <option value="Metal">Metal</option>
+                <option value="Jazz">Jazz</option>
+            </select>
         </header>
         <main>
             <section>
